<resources>
    <string name="app_name">products_android</string>
    <string name="button_save_text">SAVE</string>
    <string name="button_delete_text">DELETE</string>
    <string name="button_create_text">CREATE</string>
    <string name="edit_text_change_name_product">Name</string>
    <string name="edit_text_change_details_product">Details</string>
    <string name="edit_text_change_category_id_product">Category_id</string>
    <string name="edit_text_change_stock_product">Stock</string>
    <string name="edit_text_change_stock_min_product">Stock_min</string>
    <string name="edit_text_change_stock_max_product">Stock_max</string>
    <string name="edit_text_change_price_product">Price</string>
    <string name="hint_details">Details</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_stock_min">Stock min</string>
    <string name="hint_stock_max">Stock max</string>
    <string name="hint_price">Price</string>
    <string name="hint_name">Name</string>
    <string name="hint_categories">Categories</string>
    <string name="name_required">Name is required</string>
    <string name="details_required">Details is required</string>
    <string name="category_required">Category is required</string>
    <string name="is_not_a_number">Is not a number</string>
    <string name="error_alert_dialog_tittle">ERROR</string>
    <string name="verify_info_alert_dialog_message">ERROR</string>
    <string name="save_alert_dialog_tittle">SAVE</string>
    <string name="ask_confirmation_save_alert_dialog_message">Do you want to save?</string>
    <string name="create_alert_dialog_tittle">CREATE</string>
    <string name="ask_confirmation_create_alert_dialog_message">Do you want to create this new product?</string>
</resources>